# Email-Triage-Openenv1

./: Dockerfile  README.md  __init__.py  app.py  client.py  email_check.py  inference.py  models.py  openenv.yaml  pyproject.toml
openenv_email_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  app.py  email_triage_environment.py  requirements.txt
