[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email_triage"
version = "1.0.0"
description = "Real-world email triage environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.35.0",
    "requests>=2.32.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]

# ✅ ADD THIS PART (VERY IMPORTANT)
[project.scripts]
participant = "inference:main"
server = "server.app:main"
start = "server.app:main"